Add Oslo release(s) for June 12, 2017
Change-Id: Ie38553e1734e7da5f3c3a776f8afe9e29ea6cd9b

--- a/deliverables/pike/oslo.config.yaml
+++ b/deliverables/pike/oslo.config.yaml
@@ -33,3 +33,7 @@ releases:
   projects:
   - repo: openstack/oslo.config
     hash: d32af197a75dfae5670e6fe75f1bdb2626c75a88
+- version: 4.4.0
+  projects:
+  - repo: openstack/oslo.config
+    hash: 010e6be5f9ebf4808e63a328bd29128b9d41155e
