--- a/deliverables/pike/oslo.messaging.yaml
+++ b/deliverables/pike/oslo.messaging.yaml
@@ -49,3 +49,7 @@ releases:
   projects:
   - repo: openstack/oslo.messaging
     hash: 8b44bfd5388dea0d6e2083c7a3502949fbe887d9
+- version: 5.27.0
+  projects:
+  - repo: openstack/oslo.messaging
+    hash: e6b225c5629a386a1089af9b11befe3d0414b6b8
