--- a/deliverables/pike/osprofiler.yaml
+++ b/deliverables/pike/osprofiler.yaml
@@ -25,3 +25,7 @@ releases:
   projects:
   - repo: openstack/osprofiler
     hash: b5eac4316187366b4e483fc532cdc07ac189e984
+- version: 1.10.0
+  projects:
+  - repo: openstack/osprofiler
+    hash: 46765b104dc58b8d58213771896f9e3cb253fc68
