--- a/deliverables/pike/taskflow.yaml
+++ b/deliverables/pike/taskflow.yaml
@@ -17,3 +17,7 @@ releases:
   projects:
   - repo: openstack/taskflow
     hash: 0e9cfc947399178e73e13f2f417c83ec374e080b
+- version: 2.13.0
+  projects:
+  - repo: openstack/taskflow
+    hash: f07ae69d65882d15a60b515666580055c45b2e93
