--- a/deliverables/pike/debtcollector.yaml
+++ b/deliverables/pike/debtcollector.yaml
@@ -17,3 +17,7 @@ releases:
   projects:
   - repo: openstack/debtcollector
     hash: da416d64e219ff75f82b2fd29b5709112a6b43eb
+- version: 1.15.0
+  projects:
+  - repo: openstack/debtcollector
+    hash: d2f3f45ceb6dcf5b753e53ef8e1441efd09c2c93
