--- a/deliverables/pike/tooz.yaml
+++ b/deliverables/pike/tooz.yaml
@@ -46,3 +46,7 @@ releases:
   projects:
   - repo: openstack/tooz
     hash: 6ec73a0bed7382790819151a0a84db2a8a464438
+- version: 1.57.1
+  projects:
+  - repo: openstack/tooz
+    hash: 18fdfa9de74affa974d1536bdb7678c4df68e0a6
