--- a/deliverables/ocata/openstack-ansible.yaml
+++ b/deliverables/ocata/openstack-ansible.yaml
@@ -872,3 +872,81 @@ releases:
         hash: a7d4b0df2e9ed3c2a1414613e96c7c9db0f2db60
       - repo: openstack/openstack-ansible-os_designate
         hash: fc4f0fb40197954c96f486f4ebbd679162b27a6d
+  - version: 15.1.5
+    projects:
+      - repo: openstack/openstack-ansible
+        hash: d5ce753f8df70064317a060464c6afb45b2e7223
+      - repo: openstack/openstack-ansible-apt_package_pinning
+        hash: d5c0d7e8d21fc1539cc043097e23851296e2dd95
+      - repo: openstack/openstack-ansible-pip_install
+        hash: e142f5642646449d98cd65d8fd0690907c403801
+      - repo: openstack/openstack-ansible-galera_client
+        hash: 1d3cdcd33c75a668ac3be046ac53fe1842780058
+      - repo: openstack/openstack-ansible-galera_server
+        hash: e47877adc99bf64b900c83056716dfc09f2bcc0b
+      - repo: openstack/openstack-ansible-ceph_client
+        hash: d1b30ae7b660acbb4f9d6e4f4ab702581c6748d9
+      - repo: openstack/openstack-ansible-haproxy_server
+        hash: 04ff673f5ca4ff2cc4c96f5d45e5fc03e9ef6191
+      - repo: openstack/openstack-ansible-lxc_container_create
+        hash: e4308d463b7e68cded58a6c8845e47d3964515c7
+      - repo: openstack/openstack-ansible-lxc_hosts
+        hash: 73a62894aa26e4b63bb69336411209fc0df6abb2
+      - repo: openstack/openstack-ansible-memcached_server
+        hash: ddd1dc402b7c825265a9e59483272f2dfcd65a93
+      - repo: openstack/openstack-ansible-security
+        hash: 428bce5c4d3fc88cd1e257753923d589f89ff6c7
+      - repo: openstack/openstack-ansible-openstack_hosts
+        hash: a34527a1241beda3ebdf38e15efc021eb24dcc3f
+      - repo: openstack/openstack-ansible-os_keystone
+        hash: 436ed3a36d23112134d674a147c95039da9d2b11
+      - repo: openstack/openstack-ansible-openstack_openrc
+        hash: dfdf65b3db7c6240fa173a3a62af4e5028023626
+      - repo: openstack/openstack-ansible-os_aodh
+        hash: 7a083f0e17d2bae569ee1d68f3f5498ef777b576
+      - repo: openstack/openstack-ansible-os_barbican
+        hash: 91c62d5d2815bc53940e0048f7c9b65bd31e1a7d
+      - repo: openstack/openstack-ansible-os_ceilometer
+        hash: 1d709bd6eace68bfd7fb7d1e52df8d5b6f28810b
+      - repo: openstack/openstack-ansible-os_cinder
+        hash: ee4fed52dabc803cae4617df2a6dcaedf2163a5b
+      - repo: openstack/openstack-ansible-os_glance
+        hash: 78eff9d68a11ce17bfb81a6b0d9730fd53d26cad
+      - repo: openstack/openstack-ansible-os_gnocchi
+        hash: 8c263e50b1e75d6da73bd3e27d628207970c1f0f
+      - repo: openstack/openstack-ansible-os_heat
+        hash: 5bb1673394b57e318dc48e7504fb788f21f20fd4
+      - repo: openstack/openstack-ansible-os_horizon
+        hash: 04219bf64bb2efb96f94b9b3806965dfe80daf20
+      - repo: openstack/openstack-ansible-os_ironic
+        hash: b217195f8ae7a5a39eba7d633e625b0c3b0c63b1
+      - repo: openstack/openstack-ansible-os_magnum
+        hash: dfb38385242c9e7f8c04b4485d793055f892ee17
+      - repo: openstack/openstack-ansible-os_trove
+        hash: 93913b6af52bbf55d224b1b0b8ce53e3a8c84398
+      - repo: openstack/openstack-ansible-os_neutron
+        hash: 05993f99bec56cc92e476b59fee98cdce6d56fcf
+      - repo: openstack/openstack-ansible-os_nova
+        hash: 17dd2dd8c53897ce839f283fecb48b8c80410b07
+      - repo: openstack/openstack-ansible-os_rally
+        hash: 190522159369ddfec4c8df72bb2a3da351cb841d
+      - repo: openstack/openstack-ansible-os_sahara
+        hash: 4a224f899fbbb68be31824a265fabcb92aa873a4
+      - repo: openstack/openstack-ansible-os_swift
+        hash: 2468facecd71cf6b305eb46ae19ee2fb44509d00
+      - repo: openstack/openstack-ansible-os_tempest
+        hash: 95a9c896afb61d568fd5b612aaa7ec48363d62e3
+      - repo: openstack/openstack-ansible-plugins
+        hash: b90e8eee4b2bf2f6873a8a7dd526bf7d61b772f4
+      - repo: openstack/openstack-ansible-rabbitmq_server
+        hash: 3d1de52f75c08b3265d2b35c56c9217d60c2c840
+      - repo: openstack/openstack-ansible-repo_build
+        hash: 54ffff1f2416e4d5d724b171921957065c9241f1
+      - repo: openstack/openstack-ansible-repo_server
+        hash: 46bd085fb9685905d0d16d34424b9d59f4a4823d
+      - repo: openstack/openstack-ansible-rsyslog_client
+        hash: 5f5275720d13bd22945348751131c39877b731ab
+      - repo: openstack/openstack-ansible-rsyslog_server
+        hash: a7d4b0df2e9ed3c2a1414613e96c7c9db0f2db60
+      - repo: openstack/openstack-ansible-os_designate
+        hash: b7fd2de51c565850e4b4b17d2302af6b7476386e
