add untagged release model for devstack and grenade
Change-Id: I9fad5ca61c07ec6f985fa479bb1c5f1427b9217b
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/pike/grenade.yaml
+++ b/deliverables/pike/grenade.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: grenade
-release-model: cycle-with-milestones
+release-model: untagged
 team: Quality Assurance
 type: other
 stable-branch-type: tagless
