--- a/deliverables/pike/devstack.yaml
+++ b/deliverables/pike/devstack.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: devstack
-release-model: cycle-with-milestones
+release-model: untagged
 team: Quality Assurance
 type: other
 stable-branch-type: tagless
