--- a/deliverables/pike/instack-undercloud.yaml
+++ b/deliverables/pike/instack-undercloud.yaml
@@ -10,5 +10,9 @@ releases:
   - hash: 4e9b43dabbd64e8db88828e20dc1a98af9076654
     repo: openstack/instack-undercloud
   version: 7.0.0
+- projects:
+  - hash: 578c2a94a8e6d3c628ebda4330f01e3f289d0f81
+    repo: openstack/instack-undercloud
+  version: 7.1.0
 team: tripleo
 type: other
