--- a/deliverables/pike/oslo.config.yaml
+++ b/deliverables/pike/oslo.config.yaml
@@ -37,3 +37,7 @@ releases:
   projects:
   - repo: openstack/oslo.config
     hash: 010e6be5f9ebf4808e63a328bd29128b9d41155e
+- version: 4.5.0
+  projects:
+  - repo: openstack/oslo.config
+    hash: 6e420e9de5958dd27e6f1a38ef9bc578dde435a2
