--- a/deliverables/_independent/reno.yaml
+++ b/deliverables/_independent/reno.yaml
@@ -123,3 +123,7 @@ releases:
     projects:
       - repo: openstack/reno
         hash: 942bbd84278fa0c4d080575a80367fcad1730833
+  - version: 2.4.0
+    projects:
+      - repo: openstack/reno
+        hash: 3b2b36feded3a2f4d4e2b861c6ab32f5a9d9e52c
