--- a/deliverables/_independent/os-api-ref.yaml
+++ b/deliverables/_independent/os-api-ref.yaml
@@ -36,3 +36,7 @@ releases:
     projects:
       - repo: openstack/os-api-ref
         hash: bca739ce6f47767ff4dac8e0ada585778038b226
+  - version: 1.4.0
+    projects:
+      - repo: openstack/os-api-ref
+        hash: a67ed2f23528e97d698ddddebfc3eefd8b4267a0
