Add oslo releases for stable/ocata
Change-Id: Ic6a60414f95e658fdb96b74596e4f2fc8c3c42d2

--- a/deliverables/ocata/oslo.config.yaml
+++ b/deliverables/ocata/oslo.config.yaml
@@ -30,3 +30,7 @@ releases:
   projects:
   - repo: openstack/oslo.config
     hash: 3025b6f7365965aec8b76201fb6f76d163c437cb
+- version: 3.22.1
+  projects:
+  - repo: openstack/oslo.config
+    hash: d95290e1ef5fa311e2bd3965aedb3e07dd57f502
