--- a/deliverables/ocata/oslo.service.yaml
+++ b/deliverables/ocata/oslo.service.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/oslo.service
     hash: d05e086b8dc475b1668b80f1b00572ca9489e7e2
+- version: 1.19.1
+  projects:
+  - repo: openstack/oslo.service
+    hash: 5589677293e3f9aedb510422d51a080f6740dda5
