ocata: release nova 15.0.6
This is a bug fix release:

user@ubuntu:~/git/nova$ git log --oneline --no-merges 15.0.5..
2a11315 Calculate stopped instance's disk sizes for disk_available_least
fb4184f libvirt: handle missing rbd_secret_uuid from old connection info
87989c5 [BugFix] Release the memory quota for video ram when deleting an instance.
593e708 Warn the user about orphaned extra records during keypair migration
94a3ea5 [Trivial] Hyper-V: accept Glance vhdx images
ef853e0 Use VIR_DOMAIN_BLOCK_REBASE_COPY_DEV when rebasing
e221784 make sure to rebuild claim on recreate
a272023 Add strict option to discover_hosts
6041572 Fix cell0 naming when QS params on the connection
1052ad4 Catch neutronclient.NotFound on floating deletion
2868d52 Avoid lazy-load error when getting instance AZ
df58537 Make xenapi driver compatible with assert_can_migrate
3696a89 Fix MarkerNotFound when paging and marker was found in cell0
0316f63 Add recreate functional test for regression bug 1689692
81838f1 Correct _ensure_console_log_for_instance implementation
893d11b Avoid lazy-loading instance.id when cross_az_attach=False
74e2a40 Exclude deleted service records when calling hypervisor statistics
f2c5ee2 fix InvalidSharedStorage exception message
fbcf8d6 libvirt: Always disconnect_volume after rebase failures

Change-Id: Ifad6d6ba6384f86ed0e834e2e1781b484ccb7825

--- a/deliverables/ocata/nova.yaml
+++ b/deliverables/ocata/nova.yaml
@@ -91,3 +91,21 @@ releases:
           high consumption of memory due to database connection switching.
 
         See the release notes for more details.
+  - version: 15.0.6
+    projects:
+      - repo: openstack/nova
+        hash: fe329029265e10296a550fc9153b7977da4aefe2
+    highlights: >
+      - High severity bug fixes:
+
+        * Bug 1687581: When using the libvirt compute driver with attached
+          ceph-backed volumes, fallback to using nova config for
+          rbd_secret_uuid if it was not in the original volume connection
+          information from Cinder when the volume was attached.
+        * Bug 1692982: A --strict option is added to the
+          ``nova-manage cell_v2 discover_hosts`` command to fail if no hosts
+          are discovered.
+        * Bug 1696001: Handle parsing database connection URLs with query
+          string parameters during simple_cell_setup/map_cell0 commands.
+        * Bug 1689692: Fix paging over cells where the marker is found in the
+          cell0 database.
