--- a/deliverables/_independent/reno.yaml
+++ b/deliverables/_independent/reno.yaml
@@ -127,3 +127,7 @@ releases:
     projects:
       - repo: openstack/reno
         hash: 3b2b36feded3a2f4d4e2b861c6ab32f5a9d9e52c
+  - version: 2.4.1
+    projects:
+      - repo: openstack/reno
+        hash: a42a617350e36c0f09859c95ba89c64aa38009d2
