--- a/deliverables/pike/ironic-lib.yaml
+++ b/deliverables/pike/ironic-lib.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/ironic-lib
         hash: 8d899bd8f2a747fc6f36632dc0e76dbe54fa85a2
+  - version: 2.8.0
+    projects:
+      - repo: openstack/ironic-lib
+        hash: 56e761936623fe6c66bccfe946276a27df7a78c8
