--- a/deliverables/pike/oslo.log.yaml
+++ b/deliverables/pike/oslo.log.yaml
@@ -41,3 +41,7 @@ releases:
   projects:
   - repo: openstack/oslo.log
     hash: 34ecde516605cc2f0dfa7051ccbd8f338de0554e
+- version: 3.28.1
+  projects:
+  - repo: openstack/oslo.log
+    hash: 527a76e4e33a980c925315dc7700afcb060c365c
