--- a/deliverables/_independent/renderspec.yaml
+++ b/deliverables/_independent/renderspec.yaml
@@ -35,3 +35,7 @@ releases:
     projects:
       - repo: openstack/renderspec
         hash: a97ffcf16fff3b5eb6b3858c17c3600d2c3b2fbe
+  - version: 1.6.2
+    projects:
+      - repo: openstack/renderspec
+        hash: c0df0c06328292377bc7ccc2ad4927afc8330c11
