--- a/deliverables/pike/python-novaclient.yaml
+++ b/deliverables/pike/python-novaclient.yaml
@@ -23,3 +23,7 @@ releases:
         - Support up to microversion 2.46.
         - Add ability to set global_request_id.
         - Updated dependencies.
+  - version: 9.0.1
+    projects:
+      - repo: openstack/python-novaclient
+        hash: ddb386b2dffaf06077c2a0768c56ed5642d216dc
