--- a/deliverables/ocata/kolla.yaml
+++ b/deliverables/ocata/kolla.yaml
@@ -37,3 +37,7 @@ releases:
     projects:
       - repo: openstack/kolla
         hash: 5174429805de1d1e2901b3d3c34778bc58089e63
+  - version: 4.0.2
+    projects:
+      - repo: openstack/kolla
+        hash: d33ff04e032dc1b17139194a4409d455cf899c8b
