--- a/deliverables/ocata/kolla-ansible.yaml
+++ b/deliverables/ocata/kolla-ansible.yaml
@@ -38,3 +38,7 @@ releases:
     projects:
       - repo: openstack/kolla-ansible
         hash: 8da9d3c2c545f14f3f5696218f5bdbd2e8e7600c
+  - version: 4.0.2
+    projects:
+      - repo: openstack/kolla-ansible
+        hash: f61d731a48887110592b63baf8c27bd3ac0bac2f
