--- a/deliverables/pike/karbor.yaml
+++ b/deliverables/pike/karbor.yaml
@@ -3,3 +3,8 @@ launchpad: karbor
 release-model: cycle-with-intermediary
 team: karbor
 type: service
+releases:
+- version: 0.3.0
+  projects:
+  - repo: openstack/karbor
+    hash: 539e3ade1e5429d67d0b7eb0019e009683a27f16
