--- a/deliverables/ocata/monasca-api.yaml
+++ b/deliverables/ocata/monasca-api.yaml
@@ -23,3 +23,7 @@ releases:
     projects:
       - repo: openstack/monasca-api
         hash: 4f4927cd85b657ddffa0221e537d84ef5a3d2195
+  - version: 1.7.0
+    projects:
+      - repo: openstack/monasca-api
+        hash: e4177f7e280f1337a8c918b22d92b080c577cdcb
