--- a/deliverables/_independent/pbr.yaml
+++ b/deliverables/_independent/pbr.yaml
@@ -70,3 +70,7 @@ releases:
     projects:
       - repo: openstack-dev/pbr
         hash: c02406601a7d7c453c77318ff5b5af6d760e80ae
+  - version: 3.1.0
+    projects:
+      - repo: openstack-dev/pbr
+        hash: 3c059cb701e55c7c550f2bbe9626c9c063b0d77e
