Add oslo release(s) for June 19,2017
Change-Id: I3d02741451684f171611963e7eac5537b91dd6fa

--- a/deliverables/pike/automaton.yaml
+++ b/deliverables/pike/automaton.yaml
@@ -13,3 +13,7 @@ releases:
   projects:
   - repo: openstack/automaton
     hash: 6e9889b04ae44d9f255a5704e85e392bb937d6d7
+- version: 1.10.0
+  projects:
+  - repo: openstack/automaton
+    hash: f33976e904237c5d65438a12166d85e070484ccf
