--- a/deliverables/pike/castellan.yaml
+++ b/deliverables/pike/castellan.yaml
@@ -20,3 +20,7 @@ releases:
     projects:
       - repo: openstack/castellan
         hash: 22514018ad57542a3745518a582fced76d5081e1
+  - version: 0.10.0
+    projects:
+      - repo: openstack/castellan
+        hash: 7608bd1fada73ae620714da2b1c60e8b5fbc4725
