--- a/deliverables/pike/oslo.config.yaml
+++ b/deliverables/pike/oslo.config.yaml
@@ -41,3 +41,7 @@ releases:
   projects:
   - repo: openstack/oslo.config
     hash: 6e420e9de5958dd27e6f1a38ef9bc578dde435a2
+- version: 4.6.0
+  projects:
+  - repo: openstack/oslo.config
+    hash: 83d69f888f6c9bb89ae1e02e21b85422183efb41
