--- a/deliverables/pike/oslo.context.yaml
+++ b/deliverables/pike/oslo.context.yaml
@@ -13,3 +13,7 @@ releases:
   projects:
   - repo: openstack/oslo.context
     hash: 79d81f62e79a54aa45d2c1eb4e38d3d625f91687
+- version: 2.15.0
+  projects:
+  - repo: openstack/oslo.context
+    hash: d0f8de0eb6dc9b88632a6566880e4902f1597560
