--- a/deliverables/pike/oslosphinx.yaml
+++ b/deliverables/pike/oslosphinx.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/oslosphinx
     hash: 456bd685a6cf8f1f7952bf2126091068e04f88de
+- version: 4.15.0
+  projects:
+  - repo: openstack/oslosphinx
+    hash: 9605448df6a438fd75dadcfd315af6d4ef8436d0
