--- a/deliverables/pike/tooz.yaml
+++ b/deliverables/pike/tooz.yaml
@@ -50,3 +50,7 @@ releases:
   projects:
   - repo: openstack/tooz
     hash: 18fdfa9de74affa974d1536bdb7678c4df68e0a6
+- version: 1.57.2
+  projects:
+  - repo: openstack/tooz
+    hash: ee66b6e4e416569cb8d51a9b19263c22c6e1f87d
