--- a/deliverables/pike/oslo.messaging.yaml
+++ b/deliverables/pike/oslo.messaging.yaml
@@ -53,3 +53,7 @@ releases:
   projects:
   - repo: openstack/oslo.messaging
     hash: e6b225c5629a386a1089af9b11befe3d0414b6b8
+- version: 5.28.0
+  projects:
+  - repo: openstack/oslo.messaging
+    hash: 2fb4a216cc94e96db6fdb8c20ed4d278d15ba1fe
