--- a/deliverables/pike/oslo.middleware.yaml
+++ b/deliverables/pike/oslo.middleware.yaml
@@ -25,3 +25,7 @@ releases:
   projects:
   - repo: openstack/oslo.middleware
     hash: 9ae8bb8055d1ae5db13f39d4d5e3b2a3947c44a5
+- version: 3.29.0
+  projects:
+  - repo: openstack/oslo.middleware
+    hash: 3d6505374192840b23ff6e955a4519ba99daa677
