--- a/deliverables/newton/ceilometer.yaml
+++ b/deliverables/newton/ceilometer.yaml
@@ -49,3 +49,7 @@ releases:
     projects:
       - repo: openstack/ceilometer
         hash: 1276d4660d7a350d3855dfc75d88ccbeee2978b6
+  - version: 7.0.5
+    projects:
+      - repo: openstack/ceilometer
+        hash: ffc9e56c3c259c21578254d9f7656b9468dc5613
