--- a/deliverables/pike/shade.yaml
+++ b/deliverables/pike/shade.yaml
@@ -26,3 +26,14 @@ releases:
     highlights: >
       Removed neutronclient and cinderclient as dependencies. Also fixed some
       issues with image version discovery and servers with two private IPs.
+  - version: 1.22.0
+    projects:
+      - repo: openstack-infra/shade
+        hash: c547f1b47a81bc4cc1920d3480630305a842be9c
+    highlights: |-
+      * Removed unneeded calls made when deleting servers with floating ips.
+      * Added pagination support for volume listing.
+      * Replaced use of novaclient with direct REST calls.
+      * Replaced use of designateclient with direct REST calls.
+      * Fixed issue with neutron endpoints that did not have trailing slashes.
+      * Fixed issue with ports not having a created_at attribute.
