Tag Horizon Ocata Stable Release (11.0.3)
Change-Id: Ia69c3fef91064871e05af5a964402310fef524b2

--- a/deliverables/ocata/horizon.yaml
+++ b/deliverables/ocata/horizon.yaml
@@ -41,3 +41,7 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: 3bc399f3ae34b5eb3b18544c55c65ff8a6dc7a71
+  - version: 11.0.3
+    projects:
+      - repo: openstack/horizon
+        hash: f87d87a2fa5836b11769ef5109767353200e01be
