--- a/deliverables/newton/horizon.yaml
+++ b/deliverables/newton/horizon.yaml
@@ -53,3 +53,7 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: 843b4754f6d83910b5463421659ccb3e3feaf75d
+  - version: 10.0.5
+    projects:
+      - repo: openstack/horizon
+        hash: bd8b21b9661a27a2215ae24ce9c4aea308ae5e4a
