--- a/deliverables/pike/monasca-common.yaml
+++ b/deliverables/pike/monasca-common.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/monasca-common
         hash: 03fd5ca8844f618fd24891872df1f7d608836483
+  - version: 2.2.0
+    projects:
+      - repo: openstack/monasca-common
+        hash: 41800dd195efaf99119b44a6681ec36ea7bcde38
