Cinder stable/ocata 10.0.3 release
Bug fixes.

Change-Id: I41ae0b9e0d108c1f4cb3c6d0f8e47c19280f77d1

--- a/deliverables/ocata/cinder.yaml
+++ b/deliverables/ocata/cinder.yaml
@@ -41,3 +41,7 @@ releases:
     projects:
       - repo: openstack/cinder
         hash: 1ef2f700422df90d5ce3224bdbd759d16ffd635f
+  - version: 10.0.3
+    projects:
+      - repo: openstack/cinder
+        hash: 23ddc7cbc668ed9b2e38583ce84924ea09e70994
