--- a/deliverables/_independent/pbr.yaml
+++ b/deliverables/_independent/pbr.yaml
@@ -74,3 +74,7 @@ releases:
     projects:
       - repo: openstack-dev/pbr
         hash: 3c059cb701e55c7c550f2bbe9626c9c063b0d77e
+  - version: 3.1.1
+    projects:
+      - repo: openstack-dev/pbr
+        hash: d43badb6c1a9cf776a0899cae964966f6ccd07de
