Add oslo releases for stable/newton June 30, 2017
[ Unreleased changes in openstack/oslo.cache (stable/newton) ]
Changes between 1.14.0 and ff5bbb9

* ff5bbb9 2016-09-20 13:15:19 +0000 Updated from global requirements
* 5f87c55 2016-08-29 16:06:21 -0400 Update .gitreview for stable/newton

[ Unreleased changes in openstack/oslo.concurrency (stable/newton) ]
Changes between 3.14.0 and 9ac99b6

* 9ac99b6 2016-10-03 16:57:47 +0000 Ignore prlimit argument on Windows
* f653c5c 2016-08-29 16:06:30 -0400 Update .gitreview for stable/newton

[ Unreleased changes in openstack/oslo.db (stable/newton) ]
Changes between 4.13.5 and 3787363

* 3787363 2017-04-14 02:53:51 +0000 Fix marker checking when value is
* None
* 3e2591c 2017-02-06 21:59:16 +0100 Prepare for using standard python
* tests

[ Unreleased changes in openstack/oslo.log (stable/newton) ]
Changes between 3.16.0 and a6efc0e

* a6efc0e 2016-09-20 13:15:29 +0000 Updated from global requirements
* cb61a3a 2016-09-12 16:40:13 +0100 Fix races in unit tests
* 3a760fe 2016-08-29 16:07:18 -0400 Update .gitreview for stable/newton

[ Unreleased changes in openstack/oslo.messaging (stable/newton) ]
Changes between 5.10.1 and 4713127

* c41f0ce 2017-06-15 22:59:33 +0200 rabbit: restore synchronous
* ack/requeue
* 31ba6b5 2017-02-02 23:52:06 +0000 Updated from global requirements
* af1b98c 2016-12-09 13:08:37 +0000 [rabbit] Log correct topic on
* cast/call
* 2200d7b 2017-04-27 08:32:05 +0000 rabbit: make ack/requeue thread-safe
* 545f9e9 2017-04-27 08:50:25 +0200 tests: fix MultiStrOpt value

[ Unreleased changes in openstack/oslo.serialization (stable/newton) ]
Changes between 2.13.0 and be02fdb

* be02fdb 2016-09-20 13:15:39 +0000 Updated from global requirements
* 22741b1 2016-08-29 16:08:20 -0400 Update .gitreview for stable/newton

[ Unreleased changes in openstack/oslo.service (stable/newton) ]
Changes between 1.16.0 and 17a346b

* 17a346b 2017-05-30 13:41:59 +0000 Fix race condition with fast threads
* e11a288 2016-08-2

--- a/deliverables/newton/oslo.cache.yaml
+++ b/deliverables/newton/oslo.cache.yaml
@@ -43,3 +43,7 @@ releases:
   projects:
   - repo: openstack/oslo.cache
     hash: f6ea719fbd1e685f6e268783be2a1464f9fabaa1
+- version: 1.14.1
+  projects:
+  - repo: openstack/oslo.cache
+    hash: ff5bbb96d73a83c1e25759c42a30f01608de5b8a
