--- a/deliverables/newton/oslo.concurrency.yaml
+++ b/deliverables/newton/oslo.concurrency.yaml
@@ -39,3 +39,7 @@ releases:
   projects:
   - repo: openstack/oslo.concurrency
     hash: ebd39214b5daaa73e7fd42c62ae8844a49d2f9bf
+- version: 3.14.1
+  projects:
+  - repo: openstack/oslo.concurrency
+    hash: 9ac99b675eae255b660b03d3a1e61599d09f8316
