--- a/deliverables/newton/oslo.log.yaml
+++ b/deliverables/newton/oslo.log.yaml
@@ -74,3 +74,7 @@ releases:
     projects:
       - repo: openstack/oslo.log
         hash: 573e049edd9b565fe0282725f68ef71b2ebb5527
+  - version: 3.16.1
+    projects:
+      - repo: openstack/oslo.log
+        hash: a6efc0e714171d4f5ec8baef46cc8734fb4139dc
