--- a/deliverables/newton/oslo.serialization.yaml
+++ b/deliverables/newton/oslo.serialization.yaml
@@ -50,3 +50,7 @@ releases:
   - repo: openstack/oslo.serialization
     hash: 1f86a66a364398133fa3e7c473ae974e0ac41d04
   highlights: '* Fix serialization of binary strings in Python3'
+- version: 2.13.1
+  projects:
+  - repo: openstack/oslo.serialization
+    hash: be02fdbebc2d9f92a959aa34e0cb5a30934dfa0d
