--- a/deliverables/newton/oslo.utils.yaml
+++ b/deliverables/newton/oslo.utils.yaml
@@ -58,3 +58,7 @@ releases:
       and more clearly define its purpose/api).
     * Fix mask_dict_password for non string/dict type
       key in dict.
+- version: 3.16.1
+  projects:
+  - repo: openstack/oslo.utils
+    hash: 0aae41e0c1d3d965181b22b6fd25fb1bc0442a35
