--- a/deliverables/newton/oslo.versionedobjects.yaml
+++ b/deliverables/newton/oslo.versionedobjects.yaml
@@ -59,3 +59,7 @@ releases:
     projects:
       - repo: openstack/oslo.versionedobjects
         hash: 181e16ae975e633e8e232bb477424e157d010ca8
+  - version: 1.17.1
+    projects:
+      - repo: openstack/oslo.versionedobjects
+        hash: 9f33bd4c74949ebe42bffe39c529aa6a1c94e531
