--- a/deliverables/newton/oslo.vmware.yaml
+++ b/deliverables/newton/oslo.vmware.yaml
@@ -47,3 +47,7 @@ releases:
   projects:
   - repo: openstack/oslo.vmware
     hash: 5fef3c8cdbf76c1389cf2d74be383bbeace36ee9
+- version: 2.14.1
+  projects:
+  - repo: openstack/oslo.vmware
+    hash: bfd1e0ffd435e637d00ba54ec99aeafe4488eca1
