--- a/deliverables/newton/oslotest.yaml
+++ b/deliverables/newton/oslotest.yaml
@@ -36,3 +36,7 @@ releases:
   - repo: openstack/oslotest
     hash: 0fad88599e428bdb60d52288fd6f7d69aadfbfc8
   highlights: '- A new DisableModules fixture that removes modules from system path'
+- version: 2.10.1
+  projects:
+  - repo: openstack/oslotest
+    hash: a8c5ed4008963a3436f4a4932ac544f5ee4c283b
