--- a/deliverables/newton/taskflow.yaml
+++ b/deliverables/newton/taskflow.yaml
@@ -62,3 +62,7 @@ releases:
   projects:
   - repo: openstack/taskflow
     hash: 7ce20e80b74c70793957e18032d7d6293a01091c
+- version: 2.6.1
+  projects:
+  - repo: openstack/taskflow
+    hash: a3ecbf00cd8a8d17816ebcd23f6f4db5fd8ee0c0
