--- a/deliverables/newton/tooz.yaml
+++ b/deliverables/newton/tooz.yaml
@@ -54,3 +54,7 @@ releases:
   projects:
   - repo: openstack/tooz
     hash: 18e31db320ffda97a8c3d81d3b89132f1fb3be93
+- version: 1.43.1
+  projects:
+  - repo: openstack/tooz
+    hash: bc11f09b831dd5811d42f4845117aea2581c194e
