--- a/deliverables/newton/oslo.service.yaml
+++ b/deliverables/newton/oslo.service.yaml
@@ -41,3 +41,7 @@ releases:
   projects:
   - repo: openstack/oslo.service
     hash: 9df6088a41254ce6de3168dfb9d2ff5817fe93d5
+- version: 1.16.1
+  projects:
+  - repo: openstack/oslo.service
+    hash: 17a346b023554f48ff72f4e52decea002e311e81
