--- a/deliverables/pike/python-tackerclient.yaml
+++ b/deliverables/pike/python-tackerclient.yaml
@@ -4,3 +4,8 @@ launchpad: python-tackerclient
 release-model: cycle-with-intermediary
 team: tacker
 type: library
+releases:
+  - version: 0.10.0
+    projects:
+      - repo: openstack/python-tackerclient
+        hash: 8db716c68ccccc024961c957a2338f4c7347455c
