--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -111,3 +111,9 @@ releases:
         hash: 3d4e8cefe9c89399f78fd2bb60dd33adc954d135
         highlights: >
            Update links in header to avoid 404 errors.
+  - version: 1.10.0
+    projects:
+      - repo: openstack/openstackdocstheme
+        hash: 73ac4e1a8e2be0f6941af691c89efe0876cf6e31
+        highlights: >
+           Replace Google site search by Swiftype search.
