--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -14,5 +14,9 @@ releases:
   projects:
   - hash: e0d2548c083455ada75ecd358b4ec10c659cd361
     repo: openstack/tripleo-common
+- version: 7.2.0
+  projects:
+  - hash: 0fb7b83d7aec7acd0e0a7f838bbe6d94294c1f95
+    repo: openstack/tripleo-common
 team: tripleo
 type: other
