--- a/deliverables/ocata/monasca-ui.yaml
+++ b/deliverables/ocata/monasca-ui.yaml
@@ -19,3 +19,7 @@ releases:
     projects:
       - repo: openstack/monasca-ui
         hash: 03686e0bc97200102a20fb5e2a0caa5b3d314879
+  - version: 1.5.1
+    projects:
+      - repo: openstack/monasca-ui
+        hash: 4491b4729c71e13e1a3213d15e5f0774edeb2e2e
