--- a/deliverables/pike/heat-translator.yaml
+++ b/deliverables/pike/heat-translator.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/heat-translator
         hash: eddcaad0775521a19721964f745bf3e003072279
+  - version: 0.9.0
+    projects:
+      - repo: openstack/heat-translator
+        hash: 4973b0ccc5a236f43f436b5765a1cb301fb5f9fb
