Enable policies support in monasca-ui
Following commit aims to release a patch for
monasca-ui that enables usage of policies.

Change-Id: Ief23db8fa6c406d67bfb35acc50bcf4fea1387cd

--- a/deliverables/pike/monasca-ui.yaml
+++ b/deliverables/pike/monasca-ui.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/monasca-ui
         hash: 777f69305d895a73e269ab51acdf48efc277fc5c
+  - version: 1.7.1
+    projects:
+      - repo: openstack/monasca-ui
+        hash: a7e8a14c2d046ee2829f501aea889b6ffb47360c
