Add oslo release(s) for June 26, 2017
Change-Id: I65c31777bbbd2c9354d8cd8c954bd9a645f71e7b

--- a/deliverables/pike/oslo.vmware.yaml
+++ b/deliverables/pike/oslo.vmware.yaml
@@ -17,3 +17,7 @@ releases:
   projects:
   - repo: openstack/oslo.vmware
     hash: 73782183002c3b4aac6349ee4808f034c5ed6b50
+- version: 2.21.0
+  projects:
+  - repo: openstack/oslo.vmware
+    hash: 49c5999903d48ec21de77bef9f9f630ee2087515
