--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -117,3 +117,7 @@ releases:
         hash: 73ac4e1a8e2be0f6941af691c89efe0876cf6e31
         highlights: >
            Replace Google site search by Swiftype search.
+  - version: 1.11.0
+    projects:
+      - repo: openstack/openstackdocstheme
+        hash: f7a7a739ba68bdad82c8fa9916047d4ad428f8fd
