--- a/deliverables/newton/puppet-glance.yaml
+++ b/deliverables/newton/puppet-glance.yaml
@@ -32,3 +32,7 @@ releases:
     projects:
       - repo: openstack/puppet-glance
         hash: b59fc5506a5446eb84f606aed65e97e709b3f902
+  - version: 9.6.0
+    projects:
+      - repo: openstack/puppet-glance
+        hash: 3dd595c449c5e0af1955d508b7a0386fba884516
