--- a/deliverables/ocata/puppet-tripleo.yaml
+++ b/deliverables/ocata/puppet-tripleo.yaml
@@ -26,5 +26,9 @@ releases:
   - hash: f9867d23c58ccbbb0d30ecd6104f7745b9fa1436
     repo: openstack/puppet-tripleo
   version: 6.4.0
+- projects:
+  - hash: c6de6cf78b222b89088ae2b572953be91760cba2
+    repo: openstack/puppet-tripleo
+  version: 6.5.0
 team: tripleo
 type: other
