--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -18,5 +18,9 @@ releases:
   projects:
   - hash: 0fb7b83d7aec7acd0e0a7f838bbe6d94294c1f95
     repo: openstack/tripleo-common
+- version: 7.3.0
+  projects:
+  - hash: 5a6423b7d7bcaaf218ecc8328c7c0469c095f6c5
+    repo: openstack/tripleo-common
 team: tripleo
 type: other
