--- a/deliverables/pike/os-win.yaml
+++ b/deliverables/pike/os-win.yaml
@@ -26,3 +26,7 @@ releases:
     projects:
       - repo: openstack/os-win
         hash: aa3fbc7512dadc9349697e8b121fc1131df03510
+  - version: 2.1.0
+    projects:
+      - repo: openstack/os-win
+        hash: 88db49ebf8a8be569892d2e59d8f3dc4cebf6bf0
