--- a/deliverables/ocata/os-win.yaml
+++ b/deliverables/ocata/os-win.yaml
@@ -26,3 +26,7 @@ releases:
     projects:
       - repo: openstack/os-win
         hash: 3d4f3972cf2713ecd3b0912d6266f58eea01644f
+  - version: 1.4.2
+    projects:
+      - repo: openstack/os-win
+        hash: f66f4fac031f0c6e64a594b4c513bf028229606a
