--- a/deliverables/newton/os-win.yaml
+++ b/deliverables/newton/os-win.yaml
@@ -27,3 +27,7 @@ releases:
     projects:
       - repo: openstack/os-win
         hash: a8cfe2830c3d5b43aad4de1d668bbc2ac5c84a25
+  - version: 1.2.2
+    projects:
+      - repo: openstack/os-win
+        hash: 4eb64bc790236b05ca2c561d53e72a0ff4745f14
