--- a/deliverables/ocata/sahara.yaml
+++ b/deliverables/ocata/sahara.yaml
@@ -59,3 +59,13 @@ releases:
         hash: 85fd5506fad64fe87693ba5a6a31b26638f82fb6
       - repo: openstack/sahara-image-elements
         hash: 35f727613196e52eee470f1b64d24258ea700b3d
+  - version: 6.0.1
+    projects:
+      - repo: openstack/sahara
+        hash: edfc54aca89173678f53b9f49f9e4fee60a5df9d
+      - repo: openstack/sahara-dashboard
+        hash: 919ab93f46a2d0bf757610c09e1da3484fcdc8c0
+      - repo: openstack/sahara-extra
+        hash: 89b5dbc51d57302027bdaa4e472d0d57e89d5eb4
+      - repo: openstack/sahara-image-elements
+        hash: 0d87211d1a35d826f82fb808e8a7f41ebf5ca895
