--- a/deliverables/pike/os-brick.yaml
+++ b/deliverables/pike/os-brick.yaml
@@ -17,3 +17,7 @@ releases:
     projects:
       - repo: openstack/os-brick
         hash: 46daeb00586d368a05d178d84bf8e89d241be60d
+  - version: 1.14.0
+    projects:
+      - repo: openstack/os-brick
+        hash: 32ab0d1670e94c9d667207c72cfabe1d6554515f
