nova: pike: release os-vif 1.6.0
Change-Id: I0f1d845be9a2ae7cc76cb18e301313d335e3a8e5

--- a/deliverables/pike/os-vif.yaml
+++ b/deliverables/pike/os-vif.yaml
@@ -11,3 +11,10 @@ releases:
       - repo: openstack/os-vif
         hash: 19af4386dec2eca06592c433210232cbab479633
         tarball-base: os_vif
+  - version: 1.6.0
+    projects:
+      - repo: openstack/os-vif
+        hash: 2a09ede8fb15df6c3ef520d1107437df1d16aa89
+        tarball-base: os_vif
+    highlights: >
+        - Added hardware offload support for OVS.
