--- a/deliverables/newton/keystone.yaml
+++ b/deliverables/newton/keystone.yaml
@@ -41,3 +41,7 @@ releases:
   projects:
   - repo: openstack/keystone
     hash: 0f6e92ccd18e2d93dc2ecee79e57ee344ea09941
+- version: 10.0.2
+  projects:
+  - repo: openstack/keystone
+    hash: 05a129e54573b6cbda1ec095f4526f2b9ba90a90
