--- a/deliverables/pike/python-keystoneclient.yaml
+++ b/deliverables/pike/python-keystoneclient.yaml
@@ -9,3 +9,7 @@ releases:
   projects:
   - repo: openstack/python-keystoneclient
     hash: daa99ed5fe1df548c26feff68b45bda7ac94ea25
+- version: 3.12.0
+  projects:
+  - repo: openstack/python-keystoneclient
+    hash: 937f4d62be338d0208c698ed85d377dc4ce137be
