Add oslo releases for stable/ocata June 30, 2017
[ Unreleased changes in openstack/automaton (stable/ocata) ]
Changes between 1.7.0 and fe8824b
* fe8824b 2017-05-15 23:28:59 +0000 Updated from global requirements
* b254d99 2017-03-09 18:11:50 +0000 Updated from global requirements
* 3d039a9 2017-01-20 19:14:58 +0000 Update UPPER_CONSTRAINTS_FILE for
* stable/ocata
* 449bebf 2017-01-20 19:14:57 +0000 Update .gitreview for stable/ocata

[ Unreleased changes in openstack/futurist (stable/ocata) ]
Changes between 0.21.0 and b1104b1
* b1104b1 2017-05-15 23:30:05 +0000 Updated from global requirements
* c0e0bf3 2017-03-09 18:13:11 +0000 Updated from global requirements
* f524a59 2017-01-20 19:15:04 +0000 Update UPPER_CONSTRAINTS_FILE for
* stable/ocata
* 11dd739 2017-01-20 19:15:03 +0000 Update .gitreview for stable/ocata

[ Unreleased changes in openstack/oslo.concurrency (stable/ocata) ]
Changes between 3.18.0 and 56dca3e
* 56dca3e 2017-05-15 23:37:33 +0000 Updated from global requirements
* 4d6cd7a 2017-03-09 18:21:37 +0000 Updated from global requirements
* 847a1ba 2017-01-20 19:15:12 +0000 Update UPPER_CONSTRAINTS_FILE for
* stable/ocata
* b11242a 2017-01-20 19:15:12 +0000 Update .gitreview for stable/ocata

[ Unreleased changes in openstack/oslo.context (stable/ocata) ]
Changes between 2.12.1 and e39f890
* e39f890 2017-05-15 23:37:37 +0000 Updated from global requirements
* ca2ed90 2017-03-09 18:21:41 +0000 Updated from global requirements
* 63e0c78 2017-01-20 19:15:19 +0000 Update UPPER_CONSTRAINTS_FILE for
* stable/ocata

[ Unreleased changes in openstack/oslo.db (stable/ocata) ]
Changes between 4.17.0 and b2eec44
* b2eec44 2017-05-15 23:37:40 +0000 Updated from global requirements
* c531d75 2017-03-09 18:21:44 +0000 Updated from global requirements
* 89d222f 2017-02-09 18:19:51 +0000 Updated from global requirements
* c128d3c 2017-02-06 21:58:47 +0100 Prepare for using standard python
* tests
| * 47ff7d8 2017-01-20 19:15:23 +0000 Update UPPER_CONSTRAINTS_FILE for

--- a/deliverables/ocata/automaton.yaml
+++ b/deliverables/ocata/automaton.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/automaton
     hash: 05dbe3dbb0d1451635f02d936cbaac31d177863d
+- version: 1.7.1
+  projects:
+  - repo: openstack/automaton
+    hash: fe8824bb0232e5e3d267d21826f029ae9a163fe5
