--- a/deliverables/ocata/futurist.yaml
+++ b/deliverables/ocata/futurist.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/futurist
     hash: c23d013fe4f4c92f86883982f0abe59ba2e3e2a5
+- version: 0.21.1
+  projects:
+  - repo: openstack/futurist
+    hash: b1104b175a787bca0c5f602c4fc7c5da1180ab99
