--- a/deliverables/ocata/oslo.context.yaml
+++ b/deliverables/ocata/oslo.context.yaml
@@ -25,3 +25,7 @@ releases:
   projects:
   - repo: openstack/oslo.context
     hash: 9071eb979f1c679642b566074d5716512f15b8bd
+- version: 2.12.2
+  projects:
+  - repo: openstack/oslo.context
+    hash: e39f890bb326df3aa9fcd72d43e501906e99f719
