--- a/deliverables/ocata/oslo.db.yaml
+++ b/deliverables/ocata/oslo.db.yaml
@@ -25,3 +25,7 @@ releases:
   projects:
   - repo: openstack/oslo.db
     hash: 5095c7c16c90df3fc6d3eb1ee31b6ac291b77df6
+- version: 4.17.1
+  projects:
+  - repo: openstack/oslo.db
+    hash: b2eec440b212c6d0f19e38ec8b92a1fed8636167
