--- a/deliverables/ocata/oslo.middleware.yaml
+++ b/deliverables/ocata/oslo.middleware.yaml
@@ -30,3 +30,7 @@ releases:
   projects:
   - repo: openstack/oslo.middleware
     hash: df5c11ddcc06cd0b4f1ced99d7bdc1213e5eb646
+- version: 3.23.2
+  projects:
+  - repo: openstack/oslo.middleware
+    hash: 662f76a909325a2990c991b3d4bffcd0a78d3bdb
