--- a/deliverables/ocata/oslo.utils.yaml
+++ b/deliverables/ocata/oslo.utils.yaml
@@ -34,3 +34,7 @@ releases:
   projects:
   - repo: openstack/oslo.utils
     hash: bc8c7d375b7745fdedd2869c1b1d9c896080792b
+- version: 3.22.1
+  projects:
+  - repo: openstack/oslo.utils
+    hash: 8d2ab998e85ebf242b4fe0ab3748e0a073397712
