--- a/deliverables/ocata/oslosphinx.yaml
+++ b/deliverables/ocata/oslosphinx.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/oslosphinx
     hash: a45542eadbdeb84bb06439cd13c22b6f875761a1
+- version: 4.10.1
+  projects:
+  - repo: openstack/oslosphinx
+    hash: e76926e0440cb97e73d6e85ad77993dc55c88877
