--- a/deliverables/ocata/oslotest.yaml
+++ b/deliverables/ocata/oslotest.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/oslotest
     hash: 5337479737ae47bc323ebbc689c93bc717f5f783
+- version: 2.13.1
+  projects:
+  - repo: openstack/oslotest
+    hash: e189ff7975941a7da12533dcbaa70dbce413826c
