--- a/deliverables/ocata/stevedore.yaml
+++ b/deliverables/ocata/stevedore.yaml
@@ -25,3 +25,7 @@ releases:
   projects:
   - repo: openstack/stevedore
     hash: 6d56b58e22b75e014c274747c036f6f1ee77e4dc
+- version: 1.20.1
+  projects:
+  - repo: openstack/stevedore
+    hash: 72e7df283f5fc947370d47850a38b48af2cde7df
