--- a/deliverables/ocata/tooz.yaml
+++ b/deliverables/ocata/tooz.yaml
@@ -29,3 +29,7 @@ releases:
   projects:
   - repo: openstack/tooz
     hash: e1d67a89584686e416eb0319344b943ebc064a4b
+- version: 1.48.1
+  projects:
+  - repo: openstack/tooz
+    hash: 914ddf405221280ab50af48cc6b7d581a0380033
