--- a/deliverables/ocata/oslo.reports.yaml
+++ b/deliverables/ocata/oslo.reports.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/oslo.reports
     hash: a4181a05d13779b859056742d3dfa64e5c822117
+- version: 1.17.1
+  projects:
+  - repo: openstack/oslo.reports
+    hash: fc5e23855a9f12eb4d2826aecb7f63fdcea23da2
