--- a/deliverables/ocata/oslo.vmware.yaml
+++ b/deliverables/ocata/oslo.vmware.yaml
@@ -21,3 +21,7 @@ releases:
   projects:
   - repo: openstack/oslo.vmware
     hash: ca17b7bd39300d30e8892ba2945005ff46e8a550
+- version: 2.17.1
+  projects:
+  - repo: openstack/oslo.vmware
+    hash: f009120b42b3e6972094106c70227fe4825141af
